# scripts

./: README.md  get_serial_num.sh  launch_gst.sh  report_back.sh
ard_motion/: ard_motion.ino
cv_cap/: .gitignore  CMakeLists.txt  DisplayImage  DisplayImage.cpp  README.md  config.yaml  detect.cpp  serial_com.cpp  serial_com.h  test.mkv  test_serial.cpp
lid_switch/: lid_reset.sh  logind_original.conf
